name:                yggdrasil-mc-api
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Minecraft.Yggdrasil.API
      Minecraft.Yggdrasil.API.Aeson
      Minecraft.Yggdrasil.API.Types

  build-depends:
        base                 >= 4.7  && < 4.14
      , aeson
      , containers           >= 0.6  && < 0.7
      , lens
      , lens-aeson
      , servant              >= 0.16 && < 0.17
      , text                 >= 1.2  && < 1.3
      , unordered-containers

  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
